Improve secondary group
- les chefs de groupe religieux peuvent voir les religions de ses membres, comme à la postulation.
- les gens ne partagent "que" leur identité publique. (surnom, nom si pas de surnom et groupe)

--- a/src/LarpManager/Views/admin/groupeSecondaire/printAll.twig
+++ b/src/LarpManager/Views/admin/groupeSecondaire/printAll.twig
@@ -11,7 +11,7 @@
 	<h6>Liste des membres</h6>
 	<ul>
 	{% for membre in groupeSecondaire.membres %}
-		<li>{{ membre.personnage.identity }}</li>
+		<li>{{ membre.personnage.publicidentity }}</li>
 	{% endfor %}
 	</ul>
 
