--- a/src/LarpManager/Views/admin/trombinoscopePersoPrint.twig
+++ b/src/LarpManager/Views/admin/trombinoscopePersoPrint.twig
@@ -24,7 +24,7 @@
 			<td>
 				<div class="list-group">
 					<div class="list-group-item">
-						{{ personnage.nom }} {{ personnage.surnom }}
+						{{ personnage.publicname }}
 					</div>
 					<div class="list-group-item">
 						{{ app['personnage.manager'].titre(personnage) }}
