--- a/src/LarpManager/Views/public/groupe/fragment/membres.twig
+++ b/src/LarpManager/Views/public/groupe/fragment/membres.twig
@@ -35,7 +35,7 @@
 				
 						<p>
 							{% if joueur.personnage %}
-								{{ joueur.personnage.nom }} {{ joueur.personnage.surnom }}</a>
+								{{ joueur.personnage.nom }} ({{ joueur.personnage.surnom }})</a>
 								-- {{ joueur.personnage.classeName }}
 							{% else %}
 								N'a pas encore créé son personnage
