--- a/src/LarpManager/Views/public/magie/index.twig
+++ b/src/LarpManager/Views/public/magie/index.twig
@@ -7,7 +7,7 @@
 <ol class="breadcrumb">
 	<li><a href="{{ path('homepage')  }}">Accueil</a></li>
 	<li><a href="{{ path('gn.detail', {'gn' : participant.gn.id}) }}">{{ participant.gn.label }}</a></li>
-	<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }} {{ participant.personnage.surnom }}</a></li>
+	<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }}</a></li>
 	<li class="active">La magie</li>
 </ol>
 	
@@ -47,7 +47,7 @@
 				</tbody>
 			</table>
 				
-			<p>Example : Un sort de niveau 2 coutera 2 points de Mana au mage connaissant le domaine de magie du sortilège, et 3 points de mana au mage ne connaissant pas le domaine de magie.</p> 
+			<p>Example : Un sort de niveau 2 coutera 2 points de Mana au mage connaissant le domaine de magie du sort, et 3 points de mana au mage ne connaissant pas le domaine de magie.</p> 
 		</div>
 		
 			
