--- a/src/LarpManager/Views/public/participant/personnage_new.twig
+++ b/src/LarpManager/Views/public/participant/personnage_new.twig
@@ -25,7 +25,7 @@
 		</div>
 		<div class="col-md-8">
 			<blockquote>
-				Lors de la création d'un personnage vous recevez {{ participant.gn.xpCreation }} points d'expériences qui vous serviront à obtenir des compétences.
+				Lors de la création d'un personnage vous recevez {{ participant.gn.xpCreation }} points d'expériences (XP) qui vous serviront à obtenir des compétences.
 			</blockquote>
 			
 			<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseAge" aria-expanded="false" aria-controls="collapseAge">
