--- a/src/LarpManager/Views/admin/classe/perso.twig
+++ b/src/LarpManager/Views/admin/classe/perso.twig
@@ -7,7 +7,7 @@
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
 		<li><a href="{{ path('classe') }}">Liste des classes</a></li>
-		<li class="active">Personnages ayant ceta age</li>
+		<li class="active">Personnages ayant cette classe</li>
 	</ol>
 	
 
@@ -25,7 +25,7 @@
 
 			<div class="list-group">
 				{% for personnage in classe.personnages %}
-					<a class="list-group-item" href="{{ path('personnage.admin.detail',{'personnage':personnage.id}) }}">#{{ personnage.id }} - {{ personnage.nom }}&nbsp;{{ personnage.surnom }} - {{ personnage.classeName }}</a>
+					<a class="list-group-item" href="{{ path('personnage.admin.detail',{'personnage':personnage.id}) }}">#{{ personnage.id }} - {{ personnage.nom }}{% if personnage.surnom %} ({{ personnage.surnom }}){% endif %} -- {{ personnage.classeName }}</a>
 				{% endfor %}
 			</div>
 		</div>
