--- a/src/LarpManager/Views/admin/groupe/printMaterielGroupe.twig
+++ b/src/LarpManager/Views/admin/groupe/printMaterielGroupe.twig
@@ -22,7 +22,7 @@ table tr td {
 	<ul>
 	{% for participant in groupe.nextSession.participants %}
 		{% if participant.personnage %}
-			<li>#{{ participant.personnage.id }} {{ participant.personnage.nom }} {{ participant.personnage.surnom }}</li>
+			<li>#{{ participant.personnage.id }} {{ participant.personnage.nom }}{% if participant.personnage.surnom %} ({{ participant.personnage.surnom }}){% endif %}</li>
 		{% else %}
 			<li>Attention le participant {{ participant.user.username }} / {{ participant.user.email }} n'a pas de personnage</li>
 		{% endif %}
