--- a/src/LarpManager/Views/admin/personnage/age.twig
+++ b/src/LarpManager/Views/admin/personnage/age.twig
@@ -8,8 +8,8 @@
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
 		<li><a href="{{ path('personnage.admin.list') }}">Liste des personnages</a></li>
-		<li><a href="{{ path('personnage.admin.detail', {'personnage':personnage.id}) }}">Détail de {{ personnage.nom }} {{ personnage.surnom }}</a></li>
-		<li class="active">Modification de l'age de {{ personnage.publicName }}</li>
+		<li><a href="{{ path('personnage.admin.detail', {'personnage':personnage.id}) }}">Détail de {{ personnage.publicName }}</a></li>
+		<li class="active">Modification de l'age de {{ personnage.nom }}</li>
 	</ol>
 	
 	<div class="well bs-component">	
