--- a/src/LarpManager/Views/admin/trombinoscopePerso.twig
+++ b/src/LarpManager/Views/admin/trombinoscopePerso.twig
@@ -44,7 +44,7 @@
 					<div class="col-sm-6">
 						<div class="list-group">
 							<div class="list-group-item">
-							{{ personnage.nom }} {{ personnage.surnom }}
+							{{ personnage.publicname }}
 							</div>
 							<div class="list-group-item">
 							{{ app['personnage.manager'].titre(personnage) }}
