--- a/src/LarpManager/Views/personnage/langueAncienne.twig
+++ b/src/LarpManager/Views/personnage/langueAncienne.twig
@@ -9,14 +9,14 @@
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage')  }}">Accueil</a></li>
 		<li><a href="{{ path('gn.detail', {'gn' : participant.gn.id}) }}">{{ participant.gn.label }}</a></li>
-		<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }} {{ participant.personnage.surnom }}</a></li>
+		<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }}</a></li>
 		<li class="active">Choix d'une nouvelle langue</li>
 	</ol>
 	
 	<div class="well bs-component">
 	<form action="{{ path('participant.personnage.langueAncienne',{'participant':participant.id}) }}" method="POST" {{ form_enctype(form) }}>
 		<fieldset>
-			<blockquote>Votre compétence vous permet de choisir une nouvelle langue.</blockquote>
+			<blockquote>Votre compétence vous permet de choisir une nouvelle langue ancienne.</blockquote>
 
 			{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 			
