--- a/src/LarpManager/Views/personnage/sort.twig
+++ b/src/LarpManager/Views/personnage/sort.twig
@@ -9,15 +9,15 @@
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage')  }}">Accueil</a></li>
 		<li><a href="{{ path('gn.detail', {'gn' : participant.gn.id}) }}">{{ participant.gn.label }}</a></li>
-		<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }} {{ participant.personnage.surnom }}</a></li>
+		<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }}</a></li>
 		<li class="active">Choix d'un nouveau sortilège</li>
 	</ol>
 	
 	<div class="well bs-component">
 	<form action="{{ path('participant.personnage.sort',{'participant':participant.id, 'niveau': niveau}) }}" method="POST" {{ form_enctype(form) }}>
 		<fieldset>
-			<blockquote>Votre compétence vous permet de choisir un nouveau sortilège.</blockquote>
-			<blockquote>Attention ! Un sortilège dans un domaine que vous ne maitrisez pas necessitera plus mana pour le lancer (la description complète des sortilèges est disponible en bas de cette page)</blockquote>
+			<blockquote>Votre compétence vous permet de choisir un nouveau sort.</blockquote>
+			<blockquote>Attention ! Un sort dans un domaine que vous ne maitrisez pas necessitera plus mana pour le lancer (la description complète des sorts est disponible en bas de cette page)</blockquote>
 			{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 			
 			{{ form_row(form.sorts) }}
@@ -26,54 +26,53 @@
 	</form>
 	</div>
 	
-			<div class="well well-sm">
-				<div class="header">
-					<h5>Coût de lancement des sort</h5>
-				</div>
-				<table class="table table-condensed table-bordered">
-					<thead>
-						<tr>
-							<th>Niveau du sortilège</th>
-							<th>1</th>
-							<th>2</th>
-							<th>3</th>
-							<th>4</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<th>Coût en mana dans le domaine du mage</th>
-							<td>1</td>
-							<td>2</td>
-							<td>3</td>
-							<td>4</td>
-						</tr>
-						<tr>
-							<th>Coût en mana en dehors du domaine du mage</th>
-							<td>2</td>
-							<td>3</td>
-							<td>4</td>
-							<td>5</td>
-						</tr>
-					</tbody>
-				</table>
-				<p>Exemple : Un sort de niveau 2 coutera 2 points de Mana au mage connaissant le domaine de magie du sort, et 3 points de mana au mage ne connaissant pas le domaine de magie.</p> 
-			</div>
-	
+	<div class="well well-sm">
+		<div class="header">
+			<h5>Coût de lancement des sort</h5>
+		</div>
+		<table class="table table-condensed table-bordered">
+			<thead>
+				<tr>
+					<th>Niveau du sort</th>
+					<th>1</th>
+					<th>2</th>
+					<th>3</th>
+					<th>4</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th>Coût en mana dans le domaine du mage</th>
+					<td>1</td>
+					<td>2</td>
+					<td>3</td>
+					<td>4</td>
+				</tr>
+				<tr>
+					<th>Coût en mana en dehors du domaine du mage</th>
+					<td>2</td>
+					<td>3</td>
+					<td>4</td>
+					<td>5</td>
+				</tr>
+			</tbody>
+		</table>
+		<p>Exemple : Un sort de niveau 2 coutera 2 points de Mana au mage connaissant le domaine de magie du sort, et 3 points de mana au mage ne connaissant pas le domaine de magie.</p> 
+	</div>
+
 	{% for sort in sorts %}
-			
-				<div class="well well-sm">
-					<div class="header">
-						<h5>{{ sort.label }} - {{ sort.domaine.label }} Niveau {{ sort.niveau }}</h5>
-					</div>
-					<p>{{ sort.description|markdown }}</p>
-					<p>
-						Cout en mana
-						{% if sort.domaine in personnage.domaines %} {{ sort.niveau }}
-						{% else %} {{ sort.niveau + 1 }}
-						{% endif %}
-					</p>
-				</div>
+		<div class="well well-sm">
+			<div class="header">
+				<h5>{{ sort.label }} - {{ sort.domaine.label }} Niveau {{ sort.niveau }}</h5>
+			</div>
+			<p>{{ sort.description|markdown }}</p>
+			<p>
+				Coût en mana
+				{% if sort.domaine in personnage.domaines %} {{ sort.niveau }}
+				{% else %} {{ sort.niveau + 1 }}
+				{% endif %}
+			</p>
+		</div>
 	{% endfor %}
 </div>
 
