--- a/src/LarpManager/Views/public/competence/detail.twig
+++ b/src/LarpManager/Views/public/competence/detail.twig
@@ -7,10 +7,9 @@
 <ol class="breadcrumb">
 	<li><a href="{{ path('homepage')  }}">Accueil</a></li>
 	<li><a href="{{ path('gn.detail', {'gn' : participant.gn.id}) }}">{{ participant.gn.label }}</a></li>
-	<li><a href="{{ path('gn.personnage', {'gn' : participant.gn.id}) }}">{{ participant.personnage.nom }} - {{ participant.personnage.surnom }}</a></li>
+	<li><a href="{{ path('gn.personnage', {'gn' : participant.gn.id}) }}">{{ participant.personnage.nom }}</a></li>
 	<li class="active">{{ competence.competenceFamily.label }} ({{ competence.level.label }})</li>
 </ol>
-
 
 <div class="well well-sm">
 	<div class="header">
