--- a/src/LarpManager/Views/public/groupeSecondaire/gestion_wait.twig
+++ b/src/LarpManager/Views/public/groupeSecondaire/gestion_wait.twig
@@ -7,7 +7,7 @@
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
 		<li><a href="{{ path('gn.detail', {'gn' : participant.gn.id}) }}">{{ participant.gn.label }}</a></li>
-		<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }} {{ participant.personnage.surnom }}</a></li>
+		<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }}</a></li>
 		<li><a href="{{ path("participant.groupeSecondaire.detail", {'participant': participant.id, 'groupeSecondaire':groupeSecondaire.id}) }}">{{ groupeSecondaire.label }}</a></li>
 		<li class="active">Mise en attente d'un postulant</li>
 	</ol>
@@ -29,7 +29,7 @@
 				</div>
 				
 				<p>Le message suivant sera envoyé au postulant :</p>
-				<p>"Vous êtes accepté en tant que postulant, vous avez rendez-vous sur le GN pour que nous en parlions en jeu. Vous recevrez un rendez vous avant le GN"</p>
+				<p>"Vous êtes accepté en tant que postulant, vous avez rendez-vous sur le GN pour que nous en parlions en jeu. Vous recevrez un rendez vous avant le GN."</p>
 				{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 				{{ form(form) }}
 			</fieldset>
