--- a/src/LarpManager/Views/public/groupeSecondaire/postuler.twig
+++ b/src/LarpManager/Views/public/groupeSecondaire/postuler.twig
@@ -8,7 +8,7 @@
 		<li>Navigation :</li>
 		<li><a href="{{ path('homepage')  }}">Accueil</a></li>
 		<li><a href="{{ path('gn.detail', {'gn' : participant.gn.id}) }}">{{ participant.gn.label }}</a></li>
-		<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }} {{ participant.personnage.surnom }}</a></li>
+		<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }}</a></li>
 		<li><a href="{{ path('participant.groupeSecondaire.list', {'participant' : participant.id})  }}">Groupes secondaires</a></li>
 		<li class="active">Postuler</li>
 	</ol>
@@ -17,9 +17,9 @@
 		<form action="{{ path('participant.groupeSecondaire.postuler',{'participant' : participant.id, 'groupeSecondaire': groupeSecondaire.id}) }}" method="POST" {{ form_enctype(form) }} novalidate>
 			<fieldset>
 				<legend>Postuler à {{ groupeSecondaire.label}}</legend>
-				<h6>Remarque</h6>
-				<p>Seul votre surnom sera transmis au responsable du groupe secondaire<p>
-				<p>Dans le cas de groupes religieux, la liste de vos religions (ainsi que votre ferveur) sera transmis au responsable du groupe secondaire</p>
+				<h5>Remarque</h5>
+				<p>Seul votre surnom sera transmis au responsable du groupe secondaire, si vous en possédez un, sinon ce sera votre nom.<p>
+				<p>Dans le cas de groupes religieux, la liste de vos religions (ainsi que vos niveaux de Ferveur associés) sera transmis et visible par responsable du groupe secondaire.</p>
 				
 				{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 				{{ form(form) }}
