--- a/src/LarpManager/Views/public/personnage/descriptionReligion.twig
+++ b/src/LarpManager/Views/public/personnage/descriptionReligion.twig
@@ -9,7 +9,7 @@
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage')  }}">Accueil</a></li>
 		<li><a href="{{ path('gn.detail', {'gn' : participant.gn.id}) }}">{{ participant.gn.label }}</a></li>
-		<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }} {{ participant.personnage.surnom }}</a></li>
+		<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }}</a></li>
 		<li class="active">Choix d'un nouveau descriptif de religion</li>
 	</ol>
 	
