--- a/src/LarpManager/Views/public/personnage/trombine.twig
+++ b/src/LarpManager/Views/public/personnage/trombine.twig
@@ -7,7 +7,7 @@
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Page d'accueil</a></li>
 		<li><a href="{{ path('gn.detail', {'gn' : participant.gn.id}) }}">{{ participant.gn.label }}</a></li>
-		<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }} {{ participant.personnage.surnom }}</a></li>
+		<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }}</a></li>
 		<li class="active">Mise à jour de votre photo</li>
 	</ol>
 	
@@ -26,13 +26,9 @@
 		<div class="header"><h5>Modifier votre photo</h5></div>
 		
 		<form action="{{ path('participant.personnage.trombine', {'participant': participant.id, 'personnage': personnage.id}) }}" method="POST" {{ form_enctype(form) }}>
-			
-				
 				{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 				{{ form(form) }}
-			
 		</form>
-		
 			
 	</div>
 	
